edited some useless code out

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,13 @@
         margin: 0;
         box-sizing: border-box;
     }
+
+    body {
+        background: #1e90ff;
+        font-family: 'Poppins', sans-serif;
+        color: #fff;
+        overflow-x: hidden;
+    }
 </style>
 <body>
     {% block body %}
