--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -3,24 +3,16 @@
 
 {% block body %}
     <style>
-        body {
-            background: rgb(30, 144, 255);
-            font-family: 'Poppins', sans-serif;
-            color: #fff;
-        }
-
-        .container-fluid {
-            background-color: rgb(30, 144, 255);
+        #main {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 100vw;
+            width: 100%;
             height: 100vh;
-            font-family: 'Poppins', sans-serif;
         }
 
-        .container-fluid h1 {
+        #main h1 {
             align-self: flex-start;
             margin: 40px 40px 40px 0;
         }
@@ -35,12 +27,11 @@
         circle:nth-of-type(4) { fill: #f27c21; }
 
         #clackers {
-            /*   border: 1px solid white; */
+            display: none;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            display: none;
         }
 
         #images {
@@ -50,6 +41,7 @@
             justify-content: center;
             align-items: center;
             flex-wrap: wrap;
+            overflow-x: hidden;
         }
 
         .image {
@@ -85,6 +77,26 @@
             border-radius: 0 0 16px 16px;
             text-align: center;
         }
+
+        #images .circle-btn {
+            display: block;
+            height: 50px;
+            width: 50px;
+            border-radius: 50%;
+            border: 1px solid #fefefe;
+            margin-top: 24px;
+            font-size:22px;
+        }
+
+        #images #circle-btn-right {
+            position: absolute;
+            right: 10px;
+        }
+
+        #images #circle-btn-left {
+            position: absolute;
+            left: 10px;
+        }
     </style>
 
     <div class="container-fluid" id="main">
@@ -98,20 +110,25 @@
             </p>
             <div class="form-inline">
                 <label for="star1" class="mb-2 mr-sm-2">Connect :</label>
-                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star1" name="star1">
+                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star1" name="star1" value="emma watson">
                 <label for="star2" class="mb-2 mr-sm-2">To: </label>
-                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star2" name="star2">
+                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star2" name="star2" value="Jennifer lawrence">
                 <div class="form-check-label">
                     <button type="submit" class="btn btn-success mb-2" id="button">Submit</button>
                 </div>
             </div>
-            <div class="suggesrions">
+            <div class="suggestions">
                 <p>Suggestions: <span id="txtHint"></span></p>
             </div>
         </div>
     </div>
 
-    <div id="images"></div>
+    <div class="container-fluid">
+        <div id="images">
+            <input class="circle-btn" id="circle-btn-right" type="submit" value=">">
+            <input class="circle-btn" id="circle-btn-left" type="submit" value="<">
+        </div>
+    </div>
 
     <svg width="300" height="120" id="clackers">
         <!-- Left arc path -->
@@ -165,15 +182,14 @@
 
             // When request finish loading
             request.onload = () => {
-                const data = JSON.parse(request.responseText); // Extracts the JSON data
+                var data = JSON.parse(request.responseText); // Extracts the JSON data
                 document.getElementById('clackers').style.display = 'none';
 
                 // Loops through the extracted JSON data
                 for (let [key, value] of Object.entries(data)) {
-                    console.log(`${key}: ${value}`)
-
                     let images = document.getElementById('images'); // Gets images div
                     // Image div for the scraped image
+                    console.log(`${key}: ${value}`)
                     let image = document.createElement('div');
                     image.className = 'image';
 
