Reformatted error message, made page better - asks for an input when the images are displayed, and made the js code shorter. Implemented font awesome to code.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/cd2a81525f.js" crossorigin="anonymous"></script>
 </head>
 <style>
     * {
